--- a/ehr-epic-deploy/ehr-epic-deploy_esxi_configuration_best_practices.adoc
+++ b/ehr-epic-deploy/ehr-epic-deploy_esxi_configuration_best_practices.adoc
@@ -38,4 +38,4 @@ image:ehr-epic-deploy_image11.png[Error: Missing Graphic Image]
 
 . Click OK.
 
-link:ehr-epic-deploy_netapp_configuration.html[Next: NetApp Configuration]
+link:ehr-epic-deploy_netapp_configuration.html[Next: NetApp Configuration.]
