--- a/ehr-epic-deploy/ehr-epic-deploy_netapp_configuration.adoc
+++ b/ehr-epic-deploy/ehr-epic-deploy_netapp_configuration.adoc
@@ -20,7 +20,7 @@ summary: NetApp storage deployed for Epic software environments uses storage con
 
 NetApp storage deployed for Epic software environments uses storage controllers in a high-availability (HA) pair configuration. Storage is required to be presented from both controllers to Epic database servers over the FC Protocol (FCP). The configuration presents storage from both controllers to evenly balance the application load during normal operation.
 
-Epic requirements for separating production workloads into fault domains call pools is detailed in the “Epic All-Flash Reference Architecture Strategy Handbook.” Read this document in detail before continuing. Note that an ONTAP node can be considered a separate pool of storage.
+Epic requirements for separating production workloads into fault domains call pools is detailed in the Epic All-Flash Reference Architecture Strategy Handbook. Read this document in detail before continuing. Note that an ONTAP node can be considered a separate pool of storage.
 
 == ONTAP configuration
 
@@ -117,10 +117,9 @@ svm_cifs
 
 === ONTAP licenses
 
-After the storage controllers are set up, apply licenses to enable ONTAP features recommended by NetApp. The licenses for Epic workloads would be FC, CIFS, Snapshot, SnapRestore, FlexClone, and SnapMirror.
+After the storage controllers are set up, apply licenses to enable ONTAP features recommended by NetApp. The licenses necessary for Epic workloads are FC, CIFS, Snapshot, SnapRestore, FlexClone, and SnapMirror.
 
-. Open NetApp System Manager and go to Configuration-Licenses and add appropriate licenses. Alternatively, run the following command to add licenses using the CLI:
-+
+To apply the licenses, open NetApp System Manager and go to Configuration-Licenses and add appropriate licenses. Alternatively, run the following command to add licenses using the CLI:
 ....
 license add -license-code <code>
 ....
@@ -144,17 +143,13 @@ autosupport modify -node * -hostnamesubj true
 
 On each node, enable hardware-assisted takeover to minimize the time required to initiate a takeover following the unlikely failure of a controller. To configure hardware-assisted takeover, complete the following steps:
 
-. Run the following ONTAP command:
-+
-Set the partner address option to the IP address of the management port for prod1-01.
+. Run the following ONTAP command. Set the partner address option to the IP address of the management port for prod1-01.
 +
 ....
 EPIC::> storage failover modify -node prod1-01 -hwassist-partner-ip <prod1-02-mgmt-ip>
 ....
 
-. Run the following ONTAP command:
-+
-Set the partner address option to the IP address of the management port for cluster1-02.
+. Run the following ONTAP command. Set the partner address option to the IP address of the management port for cluster1-02.
 +
 ....
 EPIC::> storage failover modify -node prod1-02 -hwassist-partner-ip <prod1-01-mgmt-ip>
@@ -212,4 +207,4 @@ After the LUNs and igroups are created, map the LUNs to the relevant igroups tha
 +
 The LUNs are now ready to be discovered and mapped to the ESXi servers. Refresh the storage on the ESXi hosts and add the newly discovered LUNs.
 
-link:ehr-epic-deploy_genio_tool.html[Next: GenIO Tool]
+link:ehr-epic-deploy_genio_tool.html[Next: GenIO Tool.]
